# artificial-intelligence

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: DownwardFiles.cmake  FilesPZero.cmake  FindTorch.cmake  ProbFDFiles.cmake  StudentTests.cmake  TestBaseFiles.cmake  TestFilesPZero.cmake  common_cxx_flags.cmake  macros.cmake
cmake/toolchains/: toolchain.cmake
driver/: run_components.py
include/downward/: abstract_task.h  cached_heuristic.h  concepts.h  evaluation_context.h  evaluation_result.h  evaluator.h  evaluator_base.h  fact_enumerator.h  fact_pair.h  group.dox  heuristic.h  open_list.h  open_list_factory.h  operator_cost.h  operator_id.h  per_task_information.h  plan_manager.h  search_algorithm.h  search_space.h  state.h  state_id.h  state_registry.h  task_id.h  task_proxy.h
include/downward/algorithms/: int_packer.h  int_packer_types.h  max_cliques.h
include/downward/evaluators/: combining_evaluator.h  const_evaluator.h  g_evaluator.h  weighted_evaluator.h
include/downward/heuristics/: blind_search_heuristic.h  goal_count_heuristic.h
include/downward/open_lists/: best_first_open_list.h  epsilon_greedy_open_list.h  pareto_open_list.h  tiebreaking_open_list.h
include/downward/search_algorithms/: eager_search.h
include/downward/task_utils/: causal_graph.h  sampling.h  successor_generator.h  successor_generator_factory.h  task_properties.h  variable_order_finder.h
include/downward/tasks/: cost_adapted_task.h  delegating_task.h  root_task.h  syntactic_projection.h
include/downward/utils/: extended_int.h  not_implemented.h  rng.h
include/probfd/: group.dox  probabilistic_task.h  task_proxy.h  value_type.h
include/probfd/task_utils/: task_properties.h
include/tests/: group.dox
include/tests/domains/: blocksworld.h  classical_planning_domain.h  gripper.h  nomystery.h  sokoban.h  visitall.h
include/tests/utils/: heuristic_utils.h  input_utils.h  search_utils.h  task_utils.h
misc/: ai25.code-profile
misc/vscode/: launch.json  settings.json
src/: CMakeLists.txt
src/downward/: abstract_task.cc  cached_heuristic.cc  evaluation_context.cc  evaluation_result.cc  evaluator.cc  evaluator_base.cc  fact_enumerator.cc  fact_pair.cc  heuristic.cc  open_list_factory.cc  operator_cost.cc  plan_manager.cc  planner.cc  search_algorithm.cc  search_space.cc  state.cc  state_registry.cc  task_proxy.cc
src/downward/algorithms/: int_packer.cc  max_cliques.cc
src/downward/evaluators/: combining_evaluator.cc  const_evaluator.cc  g_evaluator.cc  weighted_evaluator.cc
src/downward/heuristics/: blind_search_heuristic.cc  goal_count_heuristic.cc
src/downward/open_lists/: alternation_open_list.cc  best_first_open_list.cc  epsilon_greedy_open_list.cc  pareto_open_list.cc  tiebreaking_open_list.cc
src/downward/parser/: abstract_syntax_tree.cc  decorated_abstract_syntax_tree.cc  lexical_analyzer.cc  syntax_analyzer.cc  token_stream.cc
src/downward/plugins/: raw_registry.cc  registry.cc  types.cc
src/downward/search_algorithms/: eager_search.cc  plugin_astar.cc  search_common.cc
src/downward/task_utils/: causal_graph.cc  sampling.cc  successor_generator.cc  successor_generator_factory.cc  successor_generator_internals.cc  task_properties.cc  variable_order_finder.cc
src/downward/tasks/: cost_adapted_task.cc  delegating_task.cc  root_task.cc  syntactic_projection.cc
src/downward/utils/: memory.cc  not_implemented.cc  rng.cc  system_windows.cc
src/probfd/: probabilistic_task.cc  task_proxy.cc  value_type.cc
src/probfd/task_utils/: task_properties.cc
src/tests/: CMakeLists.txt
src/tests/domains/: blocksworld.cc  classical_planning_domain.cc  gripper.cc  nomystery.cc  sokoban.cc  visitall.cc
src/tests/public/heuristic_tests/: blind_heuristic_tests.cc  goal_count_tests.cc
src/tests/student/: example_tests.cc
src/tests/utils/: heuristic_utils.cc  input_utils.cc  search_utils.cc  task_utils.cc
translate/: budget_compilation.py  discount_compilation.py  invariant_finder.py  sas_tasks.py  simplify.py  translate.py
